Let the browser decide. This is supposed to "fix" an issue in iOS but default value on iOS is "Ink" which looks better. Default value on chrome is "auto"

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -73,7 +73,6 @@ p {
 
 a {
 	color: inherit;
-	-webkit-text-decoration-skip: objects;
 }
 
 .text-color-primary {
